# 2DGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Textures.json  jsonreader.c  jsonreader.h  main.c  xmlparser.c  xmlparser.h
data/: characters.json  items.json
